Replce express router with express openapi
Refs None
